Bugfix migration change on passwordless_sudo_type.

--- a/tasks/passwordless_sudo.yml
+++ b/tasks/passwordless_sudo.yml
@@ -1,11 +1,11 @@
 ---
 - name: Select the dynamic passwordless_sudo list based on toggle.
-  set_fact: passwordless_sudo='{{ passwordless_sudo_dynamic }}'
-  when: passwordless_sudo_type='dynamic'
+  set_fact: passwordless_sudo="{{ passwordless_sudo_dynamic }}"
+  when: passwordless_sudo_type == "dynamic"
 
 - name: Select the static passwordless_sudo list based on toggle.
-  set_fact: passwordless_sudo='{{ passwordless_sudo_static }}'
-  when: passwordless_sudo_type='static'
+  set_fact: passwordless_sudo="{{ passwordless_sudo_static }}"
+  when: passwordless_sudo_type == "static"
 
 - name: "Enable passwordless sudo"
   template:
