step one, pull in repo

--- a/requirements.yml
+++ b/requirements.yml
@@ -10,10 +10,10 @@
   scm: git
   version: master
 
-- name: cis
-  src: https://github.com/hmcts/cis-role.git
-  scm: git
-  version: master
+  #- name: cis
+  #  src: https://github.com/hmcts/cis-role.git
+  #  scm: git
+  #  version: master
 
 - name: zabbixagent-role
   src: https://github.com/hmcts/zabbixagent-role
