--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+- include_vars: "ansible-management/group_vars/all.yml"
 - include: outboundproxy.yml
 - include: waagent_swap.yml
 - include: diskutil_format.yml
