--- a/run_bootstrap.yml
+++ b/run_bootstrap.yml
@@ -6,5 +6,7 @@
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
   become: true
+  include_vars:
+    dir: "ansible-management/group_vars"
   roles:
     - { role: bootstrap-role, mode: internal }
