Run ansible commands from the ansible-management directory

--- a/run_bootstrap_deva.yml
+++ b/run_bootstrap_deva.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: product_evidence
   pre_tasks:
-    - include: "tasks/resolver.yml"
+    - include: "roles/bootstrap-role/tasks/resolver.yml"
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
   become: true
