--- a/run_bootstrap_dynjenkins.yml
+++ b/run_bootstrap_dynjenkins.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   pre_tasks:
-    - include: "tasks/resolver.yml"
+    - include: "roles/bootstrap-role/tasks/resolver.yml"
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
   become: true
@@ -9,4 +9,3 @@
     - { role: bootstrap-role, mode: internal }
   vars:
     passwordless_sudo_type: dynamic
-
