--- a/run_bootstrap.yml
+++ b/run_bootstrap.yml
@@ -4,6 +4,7 @@
     - include: "tasks/resolver.yml"
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
+    https_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
   become: true
   roles:
     - { role: bootstrap-role, mode: internal }
