subtly alter method of including task for resolvers due to ansible/issues/33784

--- a/run_bootstrap_dynjenkins.yml
+++ b/run_bootstrap_dynjenkins.yml
@@ -2,6 +2,7 @@
 - hosts: all
   pre_tasks:
     - include: "tasks/resolver.yml"
+      static: yes
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
   become: true
