--- a/run_bootstrap_dynjenkins.yml
+++ b/run_bootstrap_dynjenkins.yml
@@ -12,9 +12,9 @@
 #    - { role: bootstrap-role, mode: internal }
 # Below is a workaround for ansible-galaxy not readily supporting private repos
 # which cis causes problems with.
-    - { role: filebeat-role, mode: internal }
+    - { role: devops.filebeat, mode: internal }
     - { role: clamav-role, mode: internal }
 #    - { role: cis, mode: internal }
     - { role: zabbixagent-role, mode: internal }
-    - { role: repos-role, mode: internal }
+    - { role: devops.repos, mode: internal }
 
