those would help. a lot.

--- a/tasks/outboundproxy.yml
+++ b/tasks/outboundproxy.yml
@@ -34,5 +34,8 @@
   lineinfile:
     insertafter: "[main]"
     line: "proxy=http://{{ proxy.host }}:{{ proxy.port }}"
+    path: /etc/yum.conf
+    state: present
+
 
 - meta: flush_handlers
