--- a/windows_bootstrap.yml
+++ b/windows_bootstrap.yml
@@ -1,2 +1,3 @@
 - hosts: all
-  - include: "roles/bootstrap-role/win-tasks/main.yml"
+- name: Win Tasks
+  include_tasks: "roles/bootstrap-role/win-tasks/main.yml"
