--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,3 @@
 ---
-- include: outboundproxy.yml
-- include: waagent_swap.yml
-- include: diskutil_format.yml
-- include: mail.yml
-- include: ntp.yml
-- include: ldap_install.yml
-- include: ldap_homefolders.yml
-- include: uid-gid_limits.yml
-- include: selinux.yml
-- include: passwordless_sudo.yml
-- include: disk_scheduler.yml
+- name: Include tasks for the corresponding operating system
+  include_tasks: main-{{ ansible_os_name }}.yml
