--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: Include tasks for the corresponding operating system
-  include_tasks: main-{{ ansible_os_name }}.yml
+  include_tasks: "{{ ansible_os_family }}/main.yml"
