--- a/run_bootstrap.yml
+++ b/run_bootstrap.yml
@@ -6,7 +6,7 @@
         var: ansible_os_name
     - name: Setup DNS early in the process
       include_tasks: "roles/bootstrap-role/tasks/resolver.yml"
-      when: ansible_os_name == 'linux'
+      when: ansible_os_family == 'RedHat'
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
     https_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
