--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,3 +15,4 @@ dependencies:
   - { role: clamav-role }
   - { role: zabbixagent-role }
   - { role: cis }
+  when: ansible_os_family != "windows"
