--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,8 +10,8 @@ galaxy_info:
   galaxy_tags: []
 
 dependencies:
-  - { role: devops.repos, when: ansible_os_family != "windows" }
-  - { role: devops.filebeat, when: ansible_os_family != "windows" }
-  - { role: clamav-role, when: ansible_os_family != "windows" }
-  - { role: zabbixagent-role, when: ansible_os_family != "windows" }
-  - { role: cis, when: ansible_os_family != "windows" }
+  - { role: devops.repos, when: ansible_os_family == 'RedHat' }
+  - { role: devops.filebeat, when: ansible_os_family == 'RedHat' }
+  - { role: clamav-role, when: ansible_os_family == 'RedHat' }
+  - { role: zabbixagent-role, when: ansible_os_family == 'RedHat' }
+  - { role: cis, when: ansible_os_family == 'RedHat' }
