--- a/tasks/Windows/win_docker_host.yml
+++ b/tasks/Windows/win_docker_host.yml
@@ -49,7 +49,7 @@
 - name: Configure docker engine
   win_shell: |  
     Set-Location C:\ProgramData\docker\config
-    New-Item -Type File -Name daemon.json -Path -Force
+    New-Item -Type File -Name daemon.json -Force
 
     $body = @{
         hosts = @(
@@ -59,8 +59,6 @@
             'size=120GB'
         )
     }
-
-
 
     $body |ConvertTo-Json| Out-File .\daemon.json
 
