Updated var name

--- a/run_bootstrap.yml
+++ b/run_bootstrap.yml
@@ -3,7 +3,7 @@
   pre_tasks:
     - name: Show OS
       debug:
-        var: ansible_os_name
+        var: ansible_os_family
     - name: Setup DNS early in the process
       include_tasks: "roles/bootstrap-role/tasks/resolver.yml"
       when: ansible_os_family == 'RedHat'
