--- a/run_bootstrap.yml
+++ b/run_bootstrap.yml
@@ -5,7 +5,7 @@
       debug:
         var: ansible_os_family
     - name: Setup DNS early in the process
-      include_tasks: "tasks/RedHat/resolver.yml"
+      include_tasks: "bootstrap-role/RedHat/tasks/resolver.yml"
       when: ansible_os_family == 'RedHat'
   environment:
     http_proxy: "http://reformmgmtproxyout.reform.hmcts.net:8080/"
