--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,11 @@
 ---
+- set_fact:
+    operating_system: "Linux"
+  when: ansible_os_family != 'Windows'
+
+- set_fact:
+    operating_system: "Windows"
+  when: ansible_os_family == 'Windows'
+
 - name: Include tasks for the corresponding operating system
-  include_tasks: "{{ ansible_os_family }}/main.yml"
+  include_tasks: "{{ operating_system }}/main.yml"
