RDO-2239: Keep name of ansible roles consistent to avoid failures

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,4 +15,4 @@ dependencies:
   - { role: devops.filebeat, when: ansible_os_family != 'Windows' }
   - { role: clamav-role, when: ansible_os_family != 'Windows' }
   - { role: zabbixagent-role, when: ansible_os_family != 'Windows' }
-  - { role: cis, when: ansible_os_family != 'Windows' }
+  - { role: cis-role, when: ansible_os_family != 'Windows' }
